--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		var chartData;
 		
 		  $.ajax({
-		    url: 'http://localhost:3000/sales',
+		    url: '/sales',
 		    type: 'GET',
 		    success : function(data) {
 		      chartData = data;
