--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		var chartData;
 		
 		  $.ajax({
-		    url: 'data.json',
+		    url: 'http://obscure-shore-26023.herokuapp.com/sales',
 		    type: 'GET',
 		    success : function(data) {
 		      chartData = data;
